# mutter-display-presets

./: .gitignore  README.md
.github/workflows/: appimage.yml  rust.yml
code/: Cargo.toml  build.rs
code/dbus-interfaces/: display-config.xml
code/src/: cli.rs  config_file.rs  defaults.rs  help.rs  main.rs  model.rs  mutter.rs  out.rs
