[package]
name = "mutter-display-presets"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.4", features = ["cargo"] }
log = "0.4.21"
simple_logger = "5.0.0"
serde = { version = "1.0.201", features = ["derive"] }
dbus = "0.9.7"
dbus-tree = "0.9.2"
serde_json = "1.0.117"
uuid = { version = "1.8.0", features = ["v4"] }

[dev-dependencies]
uuid = { version = "1.8.0", features = ["v4"] }

[build-dependencies]
dbus-codegen = "0.11.0"
